k8s-manifests/peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: application
spec:
  mtls:
    mode: STRICT
