k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipherwatch-app
  namespace: application
  labels:
    app: cipherwatch-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cipherwatch-app
  template:
    metadata:
      labels:
        app: cipherwatch-app
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "53"
        sidecar.istio.io/inject: "true"
    spec:
      hostAliases:
        - ip: "10.43.201.182"
          hostnames:
            - "istiod.istio-system.svc"
            - "istiod.istio-system.svc.cluster.local"
      containers:
        - name: cipherwatch-app
          image: iamddb/cipherwatch-app:latest
          ports:
            - containerPort: 5000
