k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cipherwatch-app
  namespace: application
spec:
  selector:
    app: cipherwatch-app
  ports:
    - port: 80
      targetPort: 5000
